# CFDRayTRacing

./: Makefile  inputFile.json  lambda_function.py
cfd_raytrace/: Cargo.toml  Dockerfile  Makefile  cfd_raytrace.yaml
cfd_raytrace/opdpy/: Cargo.toml
cfd_raytrace/opdpy/src/: main.rs
cfd_raytrace/src/: cfd.rs  lib.rs  ray_tracing.rs
