[package]
name = "cfd_raytrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = { version = "0.1.56" }
bincode = "1.3.3"
csv = "1.1.6"
flate2 = "1.0.24"
linya = { version = "0.3.0", optional = true }
nalgebra = "0.31.0"
npyz = { version = "0.6.1", features = ["npz", "npyz-derive"] }
rstar = "0.9.3"
s3 = { version = "0.31.0", package = "rust-s3", features = [
    "no-verify-ssl",
], optional = true }
serde = { version = "1.0.137", features = ["derive"] }
serde-pickle = "1.1.1"
thiserror = "1.0.31"
tokio = { version = "1.15.0", features = [
    "macros",
    "rt-multi-thread",
], optional = true }

[features]
default = ["shepard"]
progress = ["linya"]
s3 = ["dep:s3", "dep:tokio"]
nearest = []
shepard = []

[[bin]]
name = "read_npz_s3"
required-features = ["s3"]

[profile.release]
debug = true
